# daily-proverbs-bot

./: .gitignore  .replit  README.md  announcement_tweet.txt  config.py  esv_bot.py  kjv_bot.py  post_announcement.py  pyproject.toml  requirements.txt  x_bot.py
.github/workflows/: post-tweet.yml
attached_assets/: content-1742085450296.md  content-1742085459598.md
